8515. Fixed search icon misalignment in dropwdown cells

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -4970,7 +4970,7 @@ td .btn-actions {
       &.search {
         height: 13px;
         left: 4px !important;
-        top: 0;
+        top: 1px;
       }
     }
   }
@@ -4993,13 +4993,14 @@ td .btn-actions {
     }
   }
 
+  > .trigger .icon,
   .icon {
     color: $ids-color-font-base;
     left: 0 !important;
     margin-top: 7px;
 
     &.search {
-      margin-top: 7px !important;
+      margin-top: 7px;
     }
   }
 }
