--- a/src/components/dropdown/_dropdown-new.scss
+++ b/src/components/dropdown/_dropdown-new.scss
@@ -63,7 +63,7 @@ div.multiselect {
 .dropdown-list {
   &.small-rowheight {
     &.datagrid-dropdown-list .trigger .icon {
-    top: 7px;
+    top: 1px;
     margin-left: 2px;
     }
   }
